# 36_TechSupport

./: README.md
backend/: .gitignore  bar.py  fastapi.py  get_desc.py  images.py  line.py  pie.py  pyproject.toml
backend/app/: bar.py  get_desc.py  images.py  line.py  pie.py
frontend/: .gitignore  package-lock.json
frontend/app/: routes.ts
frontend/app/components/: chat.tsx  footer.tsx  header.tsx  hero.tsx  upload.tsx
frontend/app/pages/: dashboard.tsx  notebook.tsx
frontend/app/routes/: home.tsx
